--- a/VRChat/86/1259686.html
+++ b/VRChat/86/1259686.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "P6Cb74+gU2/WQiDhcN3sMZmswF0Sxx7ub/TW2DjVC3U="></script>
+    "9WPBzSfodRmgbfdTWn5b5aG7sjkX1EjgjPSIvB0mWU0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"カブトガニ（ボクセルモデル）","description":"何かの拍子に作成したボクセルモデルです。\nゲーム作成やVRChatなどにぜひご利用ください。\n無料版と有料版は同一です。\n\n◇利用規約\n　本モデルを購入した時点で利用規約に同意したものとします。\n\n　・改変・商用利用可能です。\n　・改変モデルの個人利用を目的とした無料配布は可能としますが、無改変モデルの再配布及び無改変・改変モデルの有料販売は禁止します。\n　・政治、宗教、他者に対する誹謗中傷目的での本モデル及び改変モデルの使用は禁止します。\n　・無改変モデルの自作発言は禁止します。\n　・本モデル及び改変モデルを利用したことによって発生したトラブルや損失に対して制作者は一切責任を負いません。\n　・なんで買ってしまったのか後悔しないでください。\n\n◇配布内容\n　・voxファイル\n　・objファイル（エクスポートファイル）\n　・readme\n\n","url":"https://booth.pm/ja/items/1259686","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/121b495d-04e1-4a34-b180-05afadedd073/i/1259686/f0c58860-d9dc-4e2f-a258-bf9048fe9f02_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="P6Cb74+gU2/WQiDhcN3sMZmswF0Sxx7ub/TW2DjVC3U="></script>
+    nonce="9WPBzSfodRmgbfdTWn5b5aG7sjkX1EjgjPSIvB0mWU0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,7 +155,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1259686/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               3
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1259686/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               3
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
