--- a/VRChat/80/1259380.html
+++ b/VRChat/80/1259380.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "uDvDeKHZmGXecYkf5f+WYZ1gZAc78bN6sYZ/Gy+ptdw="></script>
+    "Re3OEzYX/ToEY0X0TYb3iZWvQNqKcSnuTIeJDzj5Eyk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRchat向け　魔法少女風パクト","description":"※画像2枚目と3枚目はイメージです。\n\n■魔法少女っぽいコンパクトです。\nボーンが入っているので閉じたり開いたりできます。\n\n■使い方\n青い四角いアイコンをヒエラルキーにドラック＆ドロップして使ってください。\n2色入っています。\n\n■入っているprefabファイル一覧\n\nblue(Mirror)・pink(Mirror)\n　Cameraを使った鏡が入っています\n　※鏡は自分からしか見えません\n　※Cameraがアバターに入るとアバターランクが下がりますのでご注意ください\n\nblue(Mirrorclose)・pink(Mirrorclose)\n　上の物の初期状態が閉じた物となります。\n　animationで開いたりして使ってください。\n\nblue(Open)・pink(Open)\n　鏡の部分にstandardshaderのmetallicを使ったCameraの入っていないものとなります。\n\nblue(Open)・pink(Open)\n　上の物の初期状態が閉じた物となります。\n　animationで開いたりして使ってください。\n\n■FBXの構造\nパフが別objectなので、分解して使う事もできます。\n\n■animファイル\nおまけでパクトが開くアニメーションと閉じるアニメーションが入っています。\n\n■禁則事項\n政治的利用\n特定の信条や宗教のための使用\n公序良俗に反する行為\n再配布（改造・未改造問わず）\nその他製作者が不適切と判断したもの\n\n■やっていい事\n改変\n\n※上記以外の使用については作者にお問い合わせください。\n\n連絡先：https://twitter.com/chemical_15_VR\n\nこのモデルには@lept_on様　（　https://twitter.com/lept_on）　が作ったshader（　https://booth.pm/ja/items/1148311　）が使われています（Copyright (c) 2018 UNIUNI）\n","url":"https://booth.pm/ja/items/1259380","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/9585a184-fff0-488e-8a9d-612c758951c2/i/1259380/c8054312-b5f6-4a4b-ab9f-87ee01a8fd54_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="uDvDeKHZmGXecYkf5f+WYZ1gZAc78bN6sYZ/Gy+ptdw="></script>
+    nonce="Re3OEzYX/ToEY0X0TYb3iZWvQNqKcSnuTIeJDzj5Eyk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1259380/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               43
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1259380/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               43
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
