--- a/VRChat/10/1259310.html
+++ b/VRChat/10/1259310.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "5bNWWBlWSSmnpVicCkBrDJQcERw5FD9XxzgBfJrsRPE="></script>
+    "seiMxPM2vZn6dycdOiwDnnOnfDOC/8aCubwcMvcHJ94="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"シルヴィーヌ","description":"その昔あるTRPGで使用していたサモナーの女の子です。\nVRChatなどでお使いいただけるモデルになります。\n\nバーチャルマーケット2終了に伴い、割引期間は終了いたしました。\n素晴らしいブースの数々からシルヴィーヌを選んでくださった皆様、本当にありがとうございます！！\n\n\n\n\n※試着データでフィオさんの「KawaiiCamera」を使用させていただきました。\n　https://phio.booth.pm/items/1124131\n※試着データのエモートで使用できるサンクスタンプは別売りとなります。\n\n\n\n\n～内容物～\n・unitypackage\n・FBX\n・テクスチャ、psdデータ\n・オマケテキスト\n\n\n★利用規約・導入などの説明はこちらをご覧ください。（ページ下部から該当シートを選んでください）\nhttps://docs.google.com/spreadsheets/d/1DCh-S5Rafb_NYJTQHtXame5xNWiDTWg5RKkcSiIdyXA/edit?usp=sharing\n\n\n\n","url":"https://booth.pm/ja/items/1259310","offers":{"priceCurrency":"JPY","@type":"Offer","price":"4000"},"image":"https://booth.pximg.net/c/620x620/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/1259310/68d9b59f-7add-47c8-880f-bf62a0b96b7b_base_resized.jpg"}
     </script>
@@ -83,16 +83,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="5bNWWBlWSSmnpVicCkBrDJQcERw5FD9XxzgBfJrsRPE="></script>
+    nonce="seiMxPM2vZn6dycdOiwDnnOnfDOC/8aCubwcMvcHJ94="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -130,7 +129,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -171,7 +171,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1259310/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               354
@@ -186,14 +186,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1259310/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               354
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
