--- a/VRChat/32/1259232.html
+++ b/VRChat/32/1259232.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "wa6WxPTdJ+n+tHjW2mDkF4KwWtU/ISQS1b2UuRRa8XA="></script>
+    "Jww1+6Rc7vb+ypgwvuKcWV21jehJ8RQmfwoAmdL3zP8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[3Dモデル]メッセンジャーバッグ","description":"3/7更新\nダウンロードされるファイルが前のバージョンのままになっていたのを修正しました\n新しいバージョンを使う場合はお手数ですがもう一度ダウンロードをお願いします\n\nメッセンジャーバッグの3Dモデルです。\nゲーム制作やVRChatにご使用頂けます。\n\n背中掛けと横掛けに対応してます。\n\nポリゴン数\n背中掛け　2374\n横掛け　2478\n\n\n\nVRHMDをお持ちの方は下の３Dビューの右下のView in VRより、VR上でモデルを確認できます。\n※Unity上でStandard shaderを用いた時と同じ見え方になるよう調整していますが、一部見た目が異なる場合があります\n※商品画像内のアバターは付属しません","url":"https://booth.pm/ja/items/1259232","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/3e9c0dda-28ad-4162-9dd2-7a79f3fe3e95/i/1259232/e46065b2-946b-4e18-a62d-94a03a114b1d_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="wa6WxPTdJ+n+tHjW2mDkF4KwWtU/ISQS1b2UuRRa8XA="></script>
+    nonce="Jww1+6Rc7vb+ypgwvuKcWV21jehJ8RQmfwoAmdL3zP8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1259232/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               423
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1259232/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               423
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
