--- a/VRChat/15/1259215.html
+++ b/VRChat/15/1259215.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "SunnM9BPDuIoPzMxCJACU9QvoQWnsv4gPpP+MfGBjXg="></script>
+    "v0jScEew9WN7LxqmVhA2phSm/axivi8PPMBgmD6f4+A="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"指輪","description":"シンプルなシルバーの指輪です。396ポリゴンです。\n転売、改変の転売は禁じます。\n改変ご自由にどうぞ。","url":"https://booth.pm/ja/items/1259215","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/6d9a4a2d-ad78-4add-a830-2f5b118e649d/i/1259215/4fa4c7ba-aa29-4d7c-895b-870b279b46bb_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="SunnM9BPDuIoPzMxCJACU9QvoQWnsv4gPpP+MfGBjXg="></script>
+    nonce="v0jScEew9WN7LxqmVhA2phSm/axivi8PPMBgmD6f4+A="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1259215/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               32
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1259215/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               32
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
