--- a/VRChat/44/1258744.html
+++ b/VRChat/44/1258744.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "l5BWolSUoZAa/iOxDeXZWBGucxYdsH3qJSQ2toXoVv4="></script>
+    "P9aQtuC6HEnK1IgQcenCUskXuYHg8nu9KJRH/SrR8sc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRCAvatarEditor beta","description":"VRChatで使用するアバターの作成・編集を支援するエディタ拡張ツールです。\nアバターがうつったモニターを確認しながら表情作成等をおこなえます。\n\n現バージョン beta v0.6.4\n\nVRChat Creator Companion(VCC)を使用したUnityプロジェクトでは「VCC対応版」を使用してください\nVRChat公式サイトのunitypackageを使用したUnityプロジェクトでは「unitypackage対応版」を使用してください\n\n機能アップデートはVCC対応版にのみおこなっていきます。大きな不具合の修正はどちらの対応版にもおこなっていきます。\n\nプロジェクトに既にインポート済みの方は「VRCAvatarEditorフォルダ」を削除してから最新のunitypackageをインポートしてください","url":"https://booth.pm/ja/items/1258744","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/5daaaeb1-43fa-4c89-8da3-e7e44093dddb/i/1258744/ce02b894-6237-4777-9d3a-853a5e1af119_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="l5BWolSUoZAa/iOxDeXZWBGucxYdsH3qJSQ2toXoVv4="></script>
+    nonce="P9aQtuC6HEnK1IgQcenCUskXuYHg8nu9KJRH/SrR8sc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,10 +164,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1258744/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              7375
+                              7384
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1258744/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              7375
+                              7384
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
