--- a/VRChat/45/1258845.html
+++ b/VRChat/45/1258845.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "ue38KNlSusiqTAjjDbI2dL5Y4WuvynoQfnu/5O3WeFs="></script>
+    "nMU1HDPohfE9Hulo2EpCxZRYZr5q8VWCUTyUduzi9Co="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【オリジナル３Ｄモデル】むしょくま/たすくぱんぱんだ","description":"【オリジナル３Ｄモデル】むしょくま/たすくぱんぱんだ\n\n　VRChatなどのアバターとして利用することを想定したUnity用3Dモデルです。\n　Humanoid形式セットアップ済みです。\n  フルトラッキング非対応\n\n【内容物】\n　nojobbear.unitypackage\n　noJobBair.psd\n　taskPanPanda.psd\n　readme.txt\n\n【利用規約】\n　むしょくま/たすくぱんぱんだの著作権は製作者ウメ太に帰属するものとします。\n\n　本モデル購入者がVRChat他、アバター使用可能なサービスにて使用することを許可いたします。\n　VRChatにおけるペデスタル設置も許可いたします。\n\n　本モデル、及び改造モデルを第三者が3Dモデルとして再利用できる形での再配布、販売、及び製作者の詐称を禁止します。\n\n　本モデルを用いた商用利用を許可いたします。\n\n　本モデルが動画などに移りこむ際のクレジット表記は必要ありません。\n\n　本モデルの改変利用を許可いたします。\n\n　本モデルを用いた迷惑行為および公序良俗に反する行為を禁じます。\n\n【免責事項】\n　このデータを使用することで使用者側に不利な出来事（損害・事故）が生じた場合、\n　それがいかなるものであっても制作者および配布元は一切責任を負いません。\n\n　\n【更新履歴】\n2018/03/04 ver1.0　配布\n\n制作者ウメ太\nhttps://twitter.com/umeta72","url":"https://booth.pm/ja/items/1258845","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/1020ca5b-2d31-4e72-8b39-ec17421f4ec7/i/1258845/c8955b3f-9be6-4215-b473-f76a9720e74c_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ue38KNlSusiqTAjjDbI2dL5Y4WuvynoQfnu/5O3WeFs="></script>
+    nonce="nMU1HDPohfE9Hulo2EpCxZRYZr5q8VWCUTyUduzi9Co="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1258845/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               68
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1258845/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               68
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
